Version 0.4.0
------------

* Colored stdout


Version 0.3.1
------------

* [hotfix] README.rst was not included in the distribution package

Version 0.3.0
------------

* New module 'fs' handles file-related operations
* An UNIX signal handler has been implemented
* [config] mongodb.output_dir has been migrated to fs.output_dir
* [config] configuration file format has been changed from JSON to YAML
* [config] New option mongodb.hosts.*.auth_db for specifying authentication database per host
* ISO8601 format is used for naming temporary directories
* [config] Removed 'debug' directive

Version 0.2.3
------------
* The project is now distributed under the MIT License
* Project renamed to: m2bk

Version 0.2.2
------------
* Output directories have their UUID at the end of their names

Version 0.2.1
------------
* FIX: mongodump specifies --authenticationDatabase admin. That means
  the 'admin' database is assumed to hold the users used for authentication
  against the listed mongodb server on configuration

Version 0.2.0
------------
+ Upgrade to boto 2.34
+ Each file will be inside its own bucket key (s3_bucket+name)
+ For each mongodump, a random UUID is appended to the
  output directory in order to avoid name collisions
+ One config to rule them all: one config file can handle several
  hosts and their databases
+ Option: Dry run mode -> doesn't do a thing (--dry-run or -d)
+ Option: Log to stdout (-s or --stdout)
+ Option: set log level (--ll or --log-level)
+ 'log' module is now using 'logging' module
* app.init_cmdline is now using argparse instead of the old optparse
* FIX: config._list_merge: dest dict was not being checked out before insertion

Version 0.1.1
------------
+ Include CHANGELOG file
+ mongodump: Host address is included in output file
- app.get_desc was disposed, --version will only show m2bk.__version__