@@ -51,10 +51,10 @@ def init_parsecmdline(argv=[]):
                    action="store_true",  dest="dry_run", default=False,
                    help="don't actually do anything")
 
-    # --log-to-stdout
-    parser.add_argument("-s", "--stdout",
-                   action="store_true",  dest="log_to_stdout", default=False,
-                   help="log also to stdout")
+    # --quiet
+    parser.add_argument("-q", "--quiet",
+                   action="store_true",  dest="log_quiet", default=False,
+                   help="quiet output")
 
     # --ll <level>
     # logging level
@@ -69,11 +69,10 @@ def init_parsecmdline(argv=[]):
     # Set whether we are going to perform a dry run
     global _opt
     _opt["dry_run"] = options.dry_run
-    _opt["log_to_stdout"] = options.log_to_stdout
     _opt["log_lvl"] = options.log_lvl
 
     # Initiate the log level
-    log.init(_opt['log_lvl'], _opt["log_to_stdout"])
+    log.init(options.log_lvl, options.log_quiet)
 
     # Mark the start of executions
     log.msg("{pkg} [{version}] - {url}".format(pkg=PKG_NAME, version=version, url=PKG_URL))
