@@ -2,6 +2,7 @@ Version 0.4.0
 ------------
 
 * Colored stdout
+* The argument -s/--stdout has been swapped by -q/--quiet which specifies the opposite, this means that m2bk will print on stdout by default
 
 
 Version 0.3.1
